--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('src/main/libs/sqlite-simple-2.7.jar')
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okio:okio:1.3.0'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'com.google.android.gms:play-services:4.3.+'
 }
