--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,15 @@
     package="com.lumbralessoftware.colloquialisms" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light">
-        <activity
-            android:name=".activities.FlashActivity"
-            android:label="@string/app_name" >
+        android:label=""
+        android:theme="@style/Theme.AppCompat.Light" >
+        <activity android:name=".activities.FlashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +21,10 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.AddSentenceActivity"
+            android:label="@string/title_activity_add_sentence" >
         </activity>
     </application>
 
